# mcp-code-mode

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  server.py
js/: extract_imports.mjs  package.json
mcp_code_mode/: __init__.py  cache_npm_deps.py  executor.py  validator.py
mcp_codegen/: __init__.py  advanced.py  cli.py  generator.py  validate_schemas.py  verify_transmission.py
tests/: __init__.py  test_executor.py  test_validator.py
tests/js/: test_extractor.mjs
