[project]
name = "mcp-code-mode"
version = "0.1.0"
description = "Secure TypeScript code execution sandbox for MCP (Model Context Protocol)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Edison Watch Team", email = "team@edison.watch" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "typescript",
    "sandbox",
    "deno",
    "security",
    "code-execution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
mcp-code-mode = "server:main"

[project.urls]
Homepage = "https://github.com/edison-watch/mcp-code-mode"
Repository = "https://github.com/edison-watch/mcp-code-mode"
Documentation = "https://github.com/edison-watch/mcp-code-mode#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_code_mode"]
include = [
    "js/*.mjs",
    "js/package.json",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = [
    "mcp_code_mode/**",
    "js/**",
    "tests/**",
    "server.py",
    "README.md",
    "LICENSE",
    "Makefile",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

